--- a/addOn/frontend/package.json
+++ b/addOn/frontend/package.json
@@ -42,8 +42,12 @@
     "hot-copy-addOn": "nodemon -w './addOn/frontend/**/*' -e js --exec 'yarn copy-addOn'",
     "copy-and-start-addOn": "yarn hot-copy-addOn & yarn start",
     "copy-addOn": "cp -r ./addOn/frontend/* .",
-    "start": "react-scripts --max_old_space_size=4096 start",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "link-full": "yarn link-all && yarn link-semapps-packages", 
+    "link-and-copy-and-start-addOn": "yarn link-full && yarn copy-and-start-addOn",
+    "rollup" : "yarn --cwd ./../../semapps/src/frontend/ run rollup",
+    "link-all" : "yarn --cwd ./../../semapps/src/frontend/ run link-all",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
