--- a/addOn/frontend/package.json
+++ b/addOn/frontend/package.json
@@ -23,10 +23,10 @@
     "leaflet.markercluster": "^1.5.3",
     "prop-types": "^15.7.2",
     "ra-language-french": "^3.19.10",
-    "react": "^18.1.0",
+    "react": "^16.13.1 || ^17.0.0",
     "react-admin": "^3.19.10",
     "react-admin-color-input": "^3.0.0-beta.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "react-to-print": "^2.14.11",
     "sparqljs": "^3.6.2"
   },
