--- a/addOn/frontend/package.json
+++ b/addOn/frontend/package.json
@@ -7,29 +7,29 @@
     "@fullcalendar/core": "^5.7.2",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.2",
-    "@semapps/auth-provider": "0.5.1",
-    "@semapps/date-components": "0.5.1",
-    "@semapps/field-components": "0.5.1",
-    "@semapps/geo-components": "0.5.1",
-    "@semapps/input-components": "0.5.1",
-    "@semapps/interop-components": "0.5.1",
-    "@semapps/list-components": "0.5.1",
-    "@semapps/markdown-components": "0.5.1",
-    "@semapps/semantic-data-provider": "0.5.1",
+    "@mui/styles": "^5.0.2",
+    "@semapps/auth-provider": "0.5.2",
+    "@semapps/date-components": "0.5.2",
+    "@semapps/field-components": "0.5.2",
+    "@semapps/geo-components": "0.5.2",
+    "@semapps/input-components": "0.5.2",
+    "@semapps/interop-components": "0.5.2",
+    "@semapps/list-components": "0.5.2",
+    "@semapps/markdown-components": "0.5.2",
+    "@semapps/semantic-data-provider": "0.5.2",
     "date-fns": "~2.8.1",
     "history": "4.10.1",
     "leaflet": "^1.8.0",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet.markercluster": "^1.5.3",
     "prop-types": "^15.7.2",
-    "react-admin-color-input": "^3.0.0-beta.0",
-    "react-to-print": "^2.14.11",
-    "sparqljs": "^3.6.2",
     "ra-language-french": "^4.11.0",
     "react": "^18.1.0",
     "react-admin": "^4.11.0",
+    "react-admin-color-input": "^3.0.0-beta.0",
     "react-dom": "^18.1.0",
-    "@mui/styles": "^5.0.2"
+    "react-to-print": "^2.14.11",
+    "sparqljs": "^3.6.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
