--- a/addOn/frontend/package.json
+++ b/addOn/frontend/package.json
@@ -5,6 +5,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^5.7.2",
+    "@mui/icons-material": "^5.14.7",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.2",
     "@mui/styles": "^5.0.2",
@@ -43,12 +44,12 @@
     "hot-copy-addOn": "nodemon -w './addOn/frontend/**/*' -e js --exec 'yarn copy-addOn'",
     "copy-and-start-addOn": "yarn hot-copy-addOn & yarn start",
     "copy-addOn": "cp -r ./addOn/frontend/* .",
-    "link-full": "yarn link-all && yarn link-semapps-packages", 
-    "link-provider": "yarn link --cwd ./../../semapps/src/frontend/packages/semantic-data-provider && yarn link @semapps/semantic-data-provider", 
+    "link-full": "yarn link-all && yarn link-semapps-packages",
+    "link-provider": "yarn link --cwd ./../../semapps/src/frontend/packages/semantic-data-provider && yarn link @semapps/semantic-data-provider",
     "link-and-copy-and-start-addOn": "yarn link-full && yarn copy-and-start-addOn",
     "portailAD": "yarn link-provider && yarn start",
-    "rollup" : "yarn --cwd ./../../semapps/src/frontend/ run rollup",
-    "link-all" : "yarn --cwd ./../../semapps/src/frontend/ run link-all",
+    "rollup": "yarn --cwd ./../../semapps/src/frontend/ run rollup",
+    "link-all": "yarn --cwd ./../../semapps/src/frontend/ run link-all",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
