--- a/addOn/frontend/package.json
+++ b/addOn/frontend/package.json
@@ -29,6 +29,7 @@
     "react-admin": "^3.19.10",
     "react-admin-color-input": "^3.0.0-beta.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.45.4",
     "react-to-print": "^2.14.11",
     "sparqljs": "^3.6.2"
   },
