--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,7 +54,7 @@ services:
     image: dataplayers/archipelago-frontend:0.11
     environment:
       - 'REACT_APP_MIDDLEWARE_URL=http://localhost:3000/'
-      - REACT_APP_MAPBOX_ACCESS_TOKEN=pk.eyJ1Ijoic3Jvc3NldDgxIiwiYSI6ImNrbDd0b2VkMzA1dDMycG9iemU4NnpuemsifQ.HvpZ3tnweVHEUYLb0tDvTg
+      - REACT_APP_MAPBOX_ACCESS_TOKEN=${MAPBOX_TOKEN}
       - PORT=4000
     volumes:
       - ./addOn:/archipelago/frontend/addOn
