--- a/addOn/frontend/package.json
+++ b/addOn/frontend/package.json
@@ -49,7 +49,7 @@
     "rollup" : "yarn --cwd ./../../semapps/src/frontend/ run rollup",
     "link-all" : "yarn --cwd ./../../semapps/src/frontend/ run link-all",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
