last update proto

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,13 +38,14 @@ services:
       - 'SEMAPPS_HOME_URL=http://localhost:3000/'
       - 'SEMAPPS_OIDC_ISSUER=https://login.lescommuns.org/auth/realms/master/'
       - SEMAPPS_OIDC_CLIENT_ID=semapps
-      - 'SEMAPPS_REDIS_URL=redis://redis:6379/0'
+      - SEMAPPS_REDIS_CACHE_HOST=redis
+      - SEMAPPS_REDIS_CACHE_PASSW=redis      
       - SEMAPPS_BACKUP_SERVER_USER=Data-Players
       - SEMAPPS_BACKUP_SERVER_PASSWORD=D4t4-Pl4yers
       - SEMAPPS_BACKUP_SERVER_HOST=https://ftp-ftpgo.data-players.com/
       - SEMAPPS_BACKUP_SERVER_PATH=/backup/portail-alimentation-durable/backups/
       - SEMAPPS_BACKUP_FUSEKI_DATASETS_PATH=/app/fuseki-backups/
-    command: bash -c "cp -r ./addOn/middleware/* . && pm2-runtime 'yarn run dev'"
+    command: bash -c "cp -r ./addOn/middleware/* . && yarn install && pm2-runtime 'yarn run dev'"
     networks:
       - semapps
     ports:
