--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,7 +54,8 @@ services:
   frontend:
     image: dataplayers/archipelago-frontend:0.11
     environment:
-      - 'REACT_APP_MIDDLEWARE_URL=http://localhost:3000/'
+      # - REACT_APP_MIDDLEWARE_URL=http://localhost:3000/
+      - REACT_APP_MIDDLEWARE_URL=https://data.portail-alimentation-durable.data-players.com/
       - REACT_APP_MAPBOX_ACCESS_TOKEN=${MAPBOX_TOKEN}
       - PORT=4000
     volumes:
