update to semapps 0.6 alpha version

--- a/addOn/middleware/package.json
+++ b/addOn/middleware/package.json
@@ -15,11 +15,11 @@
     "unlink-semapps-packages": "yarn unlink @semapps/activitypub @semapps/auth @semapps/backup @semapps/core @semapps/importer @semapps/inference @semapps/jsonld @semapps/ldp @semapps/middlewares @semapps/mime-types @semapps/mirror @semapps/pod @semapps/signature @semapps/sparql-endpoint @semapps/triplestore @semapps/void @semapps/webacl @semapps/webfinger @semapps/webhooks @semapps/webid"
   },
   "dependencies": {
-    "@semapps/auth": "0.5.0",
-    "@semapps/backup": "0.5.0",
-    "@semapps/core": "0.5.0",
-    "@semapps/inference": "0.5.0",
-    "@semapps/webid": "0.5.0",
+    "@semapps/auth": "0.6.0-alpha.2",
+    "@semapps/backup": "0.6.0-alpha.2",
+    "@semapps/core": "0.6.0-alpha.2",
+    "@semapps/inference": "0.6.0-alpha.2",
+    "@semapps/webid": "0.6.0-alpha.2",
     "dotenv-flow": "^3.2.0",
     "ioredis": "^4.17.3",
     "fix-esm" : "^1.0.1",
