--- a/addOn/frontend/package.json
+++ b/addOn/frontend/package.json
@@ -8,15 +8,15 @@
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.2",
     "@mui/styles": "^5.0.2",
-    "@semapps/auth-provider": "0.5.3",
-    "@semapps/date-components": "0.5.3",
-    "@semapps/field-components": "0.5.3",
-    "@semapps/geo-components": "0.5.3",
-    "@semapps/input-components": "0.5.3",
-    "@semapps/interop-components": "0.5.3",
-    "@semapps/list-components": "0.5.3",
-    "@semapps/markdown-components": "0.5.3",
-    "@semapps/semantic-data-provider": "0.5.3",
+    "@semapps/auth-provider": "0.6.0-alpha.2",
+    "@semapps/date-components": "0.6.0-alpha.2",
+    "@semapps/field-components": "0.6.0-alpha.2",
+    "@semapps/geo-components": "0.6.0-alpha.2",
+    "@semapps/input-components": "0.6.0-alpha.2",
+    "@semapps/interop-components": "0.6.0-alpha.2",
+    "@semapps/list-components": "0.6.0-alpha.2",
+    "@semapps/markdown-components": "0.6.0-alpha.2",
+    "@semapps/semantic-data-provider": "0.6.0-alpha.2",
     "date-fns": "~2.8.1",
     "history": "4.10.1",
     "leaflet": "^1.8.0",
